--- a/papers/references.bib
+++ b/papers/references.bib
@@ -341,7 +341,7 @@ series = {ICFP '00}
 }
 
 @misc{esi,
-  title={Elastic Silicon Interconnects: Abstracting Communication in Accelerator Design}, 
+  title={Elastic Silicon Interconnects: Abstracting Communication in Accelerator Design},
   author={John Demme},
   year={2021},
   eprint={2111.06584},
@@ -388,5 +388,12 @@ series = {ICFP '00}
   author={Han, Sungsoo and Jang, Minseong and Kang, Jeehoon},
   booktitle={Proceedings of the 28th ACM International Conference on Architectural Support for Programming Languages and Operating Systems, Volume 2},
   pages={702--717},
+  year={2023}
+}
+
+@inproceedings{hector,
+  title={Hector: Multi-level Paradigm in Hardware Synthesis},
+  author={Xu, Ruifan and Xiao, Youwei and Luo, Jin and Liang, Yun},
+  booktitle={Workshop on Languages, Tools, and Techniques for Accelerator Design (LATTE)},
   year={2023}
 }
