plarch talk outline, fix xls cite

--- a/papers/references.bib
+++ b/papers/references.bib
@@ -397,3 +397,9 @@ series = {ICFP '00}
   booktitle={Workshop on Languages, Tools, and Techniques for Accelerator Design (LATTE)},
   year={2023}
 }
+
+@misc{xls,
+  author = {Google},
+  title = {XLS: Accelerated HW Synthesis},
+  howpublished = {\url{https://github.com/google/xls}}
+}
