--- a/papers/cs294-tidalsim/cs294-tidalsim.tex
+++ b/papers/cs294-tidalsim/cs294-tidalsim.tex
@@ -105,7 +105,7 @@ $^{(\ast)}$
 
 %Young-Jin Park, Rohit Agarwal, Oliver Yu, Lixiang (Andy) Yin, and Bryan Ngo have worked on the eDSLs presented in this paper.
 \author{\href{https://orcid.org/0000-0001-6934-6577}{Vighnesh Iyer}, Raghav Gupta, Dhruv Vaish, \href{https://orcid.org/0000-0003-2324-1715}{Borivoje Nikolić}}
-\email{{vighnesh.iyer,rgupta,bora}@berkeley.edu}
+\email{{vighnesh.iyer,rgupta,dvaish,bora}@berkeley.edu}
 \affiliation{%
   \institution{UC Berkeley}
 }
@@ -153,30 +153,30 @@ This new paradigm of multi-level simulation opens the door to an efficient and a
 \subsection{The Problem}
 
 % What is the typical microarchitectural design and iteration process?
-Designing a microprocessor involves evaluating a microarchitecture on representative workloads, and optimizing the microarchitecture to meet the power, performance, and area targets for a set of applications based on your target market.
+Designing a microprocessor involves evaluating a proposed microarchitecture on representative workloads, and optimizing the microarchitecture to meet the power, performance, and area targets for a set of applications based on your target market.
 Evaluation of a microarchitecture is typically a lengthy process and these long evaluation cycles bottleneck the iteration loop of making a microarchitectural change and seeing its impact.
 The agile design of microprocessors demands an evaluation methodology with low latency that enables rapid microarchitectural development, optimization, and tuning.
 
-% Don't want to design perf model and then design RTL to match that - what a waste!
-% Want to consider 1) evaluation of a new microarchitectural structure, 2) optimizing the uArch of a given structure, 3) tuning hardware parameters.
 % What kinds of decisions do we want to make during the process?
+% What workloads do we use to evaluate our decisions?
 Consider this scenario: you are designing the next-generation microprocessor for a mobile SoC optimized for web browsing as a microarchitect, and you want to make changes to improve the PPA of your design.
 Microarchitects rarely start completely from scratch; instead, you have the RTL from the previous generation's microprocessor, a functional ISA-level model, and perhaps a performance model.
+Let's say you also have web and mobile applications and perhaps some smaller benchmark suites from the software engineering side.
+The goal of the microarchitecture iteration loop is to make changes to the RTL, evaluate them for correctness and performance on the real-world applications they will see, and finally 
 
+\begin{figure}[h]
+  \includegraphics[width=\linewidth]{dynamic/tidalsim/uarch_iteration_flow.pdf}
+  \caption{The elements of a generic eDSL.}
+  \label{fig:functional_apis}
+\end{figure}
+
+% Want to consider 1) evaluation of a new microarchitectural structure, 2) optimizing the uArch of a given structure, 3) tuning hardware parameters.
+
+
+% Don't want to design perf model and then design RTL to match that - what a waste, not agile!
+% Also how much fidelity is typical from perf sims? (cite paper on arch simulators considered harmful). miscorrelation vs RTL *compounds* over simulation time!
 
 \subsection{Our Contributions}
-
-What workloads do we use to evaluate our decisions?
-Consider both parameter tuning as well as original microarchtectiual structures or optimizations within a given structure.
-
-% \vspace{-0.5cm}
-% \begin{figure}[h]
-% \includegraphics[width=\linewidth]{simcommand/functional_apis.pdf}
-% \caption{The elements of a generic eDSL.}
-% \label{fig:functional_apis}
-% \end{figure}
-% \vspace{-0.5cm}
-
 
 \section{Background}
 
